--- a/node30.html
+++ b/node30.html
@@ -267,42 +267,44 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
   HREF="node38.html#SECTION04482030000000000000">Ejecución</A>
 <LI><A NAME="tex2html1578"
   HREF="node38.html#SECTION04482040000000000000">Donde</A>
-</UL>
 <LI><A NAME="tex2html1579"
+  HREF="node38.html#SECTION04482050000000000000">Invirtiendo el orden de las Alternativas</A>
+</UL>
+<LI><A NAME="tex2html1580"
   HREF="node38.html#SECTION04483000000000000000">Not Predicate: Comentarios Anidados</A>
 <UL>
-<LI><A NAME="tex2html1580"
-  HREF="node38.html#SECTION04483010000000000000">Pascal_comments.pegjs</A>
 <LI><A NAME="tex2html1581"
-  HREF="node38.html#SECTION04483020000000000000">use_pascal_comments.js</A>
+  HREF="node38.html#SECTION04483010000000000000">Pascal_comments.pegjs</A>
 <LI><A NAME="tex2html1582"
-  HREF="node38.html#SECTION04483030000000000000">Ejecución</A>
+  HREF="node38.html#SECTION04483020000000000000">use_pascal_comments.js</A>
 <LI><A NAME="tex2html1583"
+  HREF="node38.html#SECTION04483030000000000000">Ejecución</A>
+<LI><A NAME="tex2html1584"
   HREF="node38.html#SECTION04483040000000000000">Donde</A>
 </UL>
-<LI><A NAME="tex2html1584"
+<LI><A NAME="tex2html1585"
   HREF="node38.html#SECTION04484000000000000000">Un Lenguaje Dependiente del Contexto</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1585"
-  HREF="node39.html">Práctica: Analizador de PL0 Usando PEG.js</A>
 <LI><A NAME="tex2html1586"
+  HREF="node39.html">Práctica: Analizador de PL0 Usando PEG.js</A>
+<LI><A NAME="tex2html1587"
   HREF="node40.html">Práctica: Analizador de PL0 Ampliado Usando PEG.js</A>
 <UL>
-<LI><A NAME="tex2html1587"
-  HREF="node40.html#SECTION044100010000000000000">Donde</A>
 <LI><A NAME="tex2html1588"
-  HREF="node40.html#SECTION044100020000000000000">Tareas</A>
+  HREF="node40.html#SECTION044100010000000000000">Donde</A>
 <LI><A NAME="tex2html1589"
+  HREF="node40.html#SECTION044100020000000000000">Tareas</A>
+<LI><A NAME="tex2html1590"
   HREF="node40.html#SECTION044100030000000000000">Referencias para esta Práctica</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1590"
-  HREF="node41.html">Práctica: Ambiguedad en C++</A>
 <LI><A NAME="tex2html1591"
+  HREF="node41.html">Práctica: Ambiguedad en C++</A>
+<LI><A NAME="tex2html1592"
   HREF="node42.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 <UL>
-<LI><A NAME="tex2html1592"
+<LI><A NAME="tex2html1593"
   HREF="node42.html#SECTION044120010000000000000">Recursos</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
