--- a/node38.html
+++ b/node38.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1756"
+<A NAME="tex2html1757"
   HREF="node39.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1750"
+<A NAME="tex2html1751"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1744"
+<A NAME="tex2html1745"
   HREF="node37.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1752"
+<A NAME="tex2html1753"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1754"
+<A NAME="tex2html1755"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1757"
+<B> Sig:</B> <A NAME="tex2html1758"
   HREF="node39.html">Práctica: Analizador de PL0</A>
-<B>Sup:</B> <A NAME="tex2html1751"
+<B>Sup:</B> <A NAME="tex2html1752"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1745"
+<B> Ant:</B> <A NAME="tex2html1746"
   HREF="node37.html">Eliminación de la Recursividad</A>
 <B> Con:</B> 
-<A NAME="tex2html1752"
+<A NAME="tex2html1753"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1754"
+<A NAME="tex2html1755"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -101,35 +101,37 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html1758"
-  HREF="node38.html#SECTION04481000000000000000">PEGs versus Gramáticas</A>
 <LI><A NAME="tex2html1759"
+  HREF="node38.html#SECTION04481000000000000000">PEGs versus Gramáticas</A>
+<LI><A NAME="tex2html1760"
   HREF="node38.html#SECTION04482000000000000000"><FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
 <UL>
-<LI><A NAME="tex2html1760"
-  HREF="node38.html#SECTION04482010000000000000">danglingelse.pegjs</A>
 <LI><A NAME="tex2html1761"
-  HREF="node38.html#SECTION04482020000000000000">use_danglingelse.js</A>
+  HREF="node38.html#SECTION04482010000000000000">danglingelse.pegjs</A>
 <LI><A NAME="tex2html1762"
-  HREF="node38.html#SECTION04482030000000000000">Ejecución</A>
+  HREF="node38.html#SECTION04482020000000000000">use_danglingelse.js</A>
 <LI><A NAME="tex2html1763"
+  HREF="node38.html#SECTION04482030000000000000">Ejecución</A>
+<LI><A NAME="tex2html1764"
   HREF="node38.html#SECTION04482040000000000000">Donde</A>
+<LI><A NAME="tex2html1765"
+  HREF="node38.html#SECTION04482050000000000000">Invirtiendo el orden de las Alternativas</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1764"
+<LI><A NAME="tex2html1766"
   HREF="node38.html#SECTION04483000000000000000">Not Predicate: Comentarios Anidados</A>
 <UL>
-<LI><A NAME="tex2html1765"
-  HREF="node38.html#SECTION04483010000000000000">Pascal_comments.pegjs</A>
-<LI><A NAME="tex2html1766"
-  HREF="node38.html#SECTION04483020000000000000">use_pascal_comments.js</A>
 <LI><A NAME="tex2html1767"
-  HREF="node38.html#SECTION04483030000000000000">Ejecución</A>
+  HREF="node38.html#SECTION04483010000000000000">Pascal_comments.pegjs</A>
 <LI><A NAME="tex2html1768"
+  HREF="node38.html#SECTION04483020000000000000">use_pascal_comments.js</A>
+<LI><A NAME="tex2html1769"
+  HREF="node38.html#SECTION04483030000000000000">Ejecución</A>
+<LI><A NAME="tex2html1770"
   HREF="node38.html#SECTION04483040000000000000">Donde</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1769"
+<LI><A NAME="tex2html1771"
   HREF="node38.html#SECTION04484000000000000000">Un Lenguaje Dependiente del Contexto</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -339,6 +341,44 @@ origin  git@github.com:crguezl/pegjs.git (push)
 
 <P>
 
+<H4><A NAME="SECTION04482050000000000000">
+Invirtiendo el orden de las Alternativas</A>
+</H4>
+  
+
+<P>
+<PRE>
+[~/srcPLgrado/pegjs/examples(master)]$ cat danglingelse2.pegjs 
+/*
+S ← 'if' C 'then' S 'else' S / 'if' C 'then' S
+*/
+
+S =   if C:C then S:S            { return [ 'ifthen', C, S]; }
+    / if C:C then S1:S else S2:S { return [ 'ifthenelse', C, S1, S2 ]; }
+    / O                          { return 'O'; }
+_ = ' '*
+C = _'c'_                        { return 'c'; }
+O = _'o'_                        { return 'o'; }
+else = _'else'_                 
+if = _'if'_
+then = _'then'_
+
+[~/srcPLgrado/pegjs/examples(master)]$ pegjs danglingelse2.pegjs 
+[~/srcPLgrado/pegjs/examples(master)]$ cat use_danglingelse2.js 
+var PEG = require("./danglingelse2.js");
+var r = PEG.parse("if c then if c then o else o");
+console.log(JSON.stringify(r));
+
+[~/srcPLgrado/pegjs/examples(master)]$ node use_danglingelse2.js 
+
+/Users/casiano/local/src/javascript/PLgrado/pegjs/examples/danglingelse2.js:513
+      throw peg$buildException(null, peg$maxFailExpected, peg$maxFailPos);
+            ^
+SyntaxError: Expected " " or end of input but "e" found.
+</PRE>
+
+<P>
+
 <H2><A NAME="SECTION04483000000000000000">
 Not Predicate: Comentarios Anidados</A>
 </H2>
@@ -521,19 +561,19 @@ Grr....SyntaxError: Expected undefined but "a" found.
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1756"
+<A NAME="tex2html1757"
   HREF="node39.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1750"
+<A NAME="tex2html1751"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1744"
+<A NAME="tex2html1745"
   HREF="node37.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1752"
+<A NAME="tex2html1753"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1754"
+<A NAME="tex2html1755"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -573,11 +613,11 @@ Grr....SyntaxError: Expected undefined but "a" found.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1757"
+<B> Sig:</B> <A NAME="tex2html1758"
   HREF="node39.html">Práctica: Analizador de PL0</A>
-<B>Sup:</B> <A NAME="tex2html1751"
+<B>Sup:</B> <A NAME="tex2html1752"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1745"
+<B> Ant:</B> <A NAME="tex2html1746"
   HREF="node37.html">Eliminación de la Recursividad</A>
 </DIV>
 <!--End of Navigation Panel-->
