--- a/node46.html
+++ b/node46.html
@@ -151,6 +151,14 @@ Ejemplo en Jison: Calculadora Simple
   remotes/origin/master
 </PRE>
 </LI>
+<LI>Una versión en Sinatra se encuentra en:
+<PRE>
+[~/srcPLgrado/jison/jison-simple-html-calc(gh-pages)]$ pwd -P
+/Users/casiano/local/src/javascript/PLgrado/jison/jison-simple-html-calc
+[~/srcPLgrado/jison/jison-simple-html-calc(gh-pages)]$ git remote -v
+origin  git@github.com:crguezl/jison-simple-html-calc.git (fetch)
+</PRE>
+</LI>
 </OL>
 <H4><A NAME="SECTION04530010000000000000">
 calculator.jison</A>
@@ -454,7 +462,7 @@ test/test.html</A>
 <P>
 
 <H2><A NAME="SECTION04531000000000000000"></A>
-   <A NAME="8038"></A>
+   <A NAME="8040"></A>
   
 <A NAME="subsectionpractica:calculadora"></A>
 <BR>
