--- a/node46.html
+++ b/node46.html
@@ -159,7 +159,33 @@ Ejemplo en Jison: Calculadora Simple
 origin  git@github.com:crguezl/jison-simple-html-calc.git (fetch)
 </PRE>
 </LI>
+<LI>Otra versión Sinatra puede encontrarse en:
+<PRE>
+[~/srcPLgrado/jison/jisoncalc(heroku)]$ git remote -v
+bitbucket       ssh://git@bitbucket.org/casiano/ull-etsii-grado-pl-jisoncalc.git (fetch)
+heroku  git@heroku.com:jisoncalc.git (fetch)
+origin  git@github.com:crguezl/ull-etsii-grado-pl-jisoncalc.git (fetch)
+[~/srcPLgrado/jison/jisoncalc(heroku)]$ ls -l test/
+total 24
+-rw-rw-r--  1 casiano  staff   264 19 mar  2013 assert.js
+-rw-rw-r--  1 casiano  staff   153 19 mar  2013 test.css
+-rw-rw-r--  1 casiano  staff  1021  1 abr  2013 test.html
+[~/srcPLgrado/jison/jisoncalc(heroku)]$ git branch -a
+  clase
+  develop
+* heroku
+  master
+  remotes/bitbucket/clase
+  remotes/bitbucket/interactive
+  remotes/bitbucket/master
+  remotes/bitbucket/seplex
+  remotes/origin/master
+</PRE>
+</LI>
 </OL>
+
+<P>
+
 <H4><A NAME="SECTION04530010000000000000">
 calculator.jison</A>
 </H4>
@@ -462,7 +488,7 @@ test/test.html</A>
 <P>
 
 <H2><A NAME="SECTION04531000000000000000"></A>
-   <A NAME="8040"></A>
+   <A NAME="8042"></A>
   
 <A NAME="subsectionpractica:calculadora"></A>
 <BR>
