--- a/node46.html
+++ b/node46.html
@@ -159,7 +159,7 @@ Ejemplo en Jison: Calculadora Simple
 origin  git@github.com:crguezl/jison-simple-html-calc.git (fetch)
 </PRE>
 </LI>
-<LI>Otra versión Sinatra puede encontrarse en:
+<LI>Otra versión Sinatra con pruebas puede encontrarse en:
 <PRE>
 [~/srcPLgrado/jison/jisoncalc(heroku)]$ git remote -v
 bitbucket       ssh://git@bitbucket.org/casiano/ull-etsii-grado-pl-jisoncalc.git (fetch)
