--- a/node103.html
+++ b/node103.html
@@ -269,7 +269,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DD><A HREF="node59.html#9430">Definición Dirigida por la</A>
 <DT><STRONG>LALR</STRONG>
 <DD><A HREF="node48.html#8113">Construcción de las Tablas</A>
-<DT><STRONG>lenguaje de las formas sentenciales a rderechas</STRONG>
+<DT><STRONG>lenguaje de las formas sentenciales a derechas</STRONG>
 <DD><A HREF="node47.html#8053">Conceptos Básicos del Análisis</A>
 <DT><STRONG>lenguaje árbol generado por una gramática</STRONG>
 <DD><A HREF="node69.html#10407">Lenguaje Generado por una</A>
