--- a/node47.html
+++ b/node47.html
@@ -112,7 +112,7 @@ la construcción de la primera derivación desde el símbolo de arranque.
 
 <P>
 Empezaremos entonces considerando las frases que pueden aparecer en una derivación
-a derechas. Tales frases consituyen el <A NAME="8053"></A><SPAN  CLASS="textbf">lenguaje de las formas sentenciales a rderechas</SPAN> <SPAN CLASS="MATH"><IMG
+a derechas. Tales frases consituyen el <A NAME="8053"></A><SPAN  CLASS="textbf">lenguaje de las formas sentenciales a derechas</SPAN> <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img101.png"
  ALT="$ FSD$"></SPAN>:
