--- a/node45.html
+++ b/node45.html
@@ -398,7 +398,7 @@ a language written using Jison
 <P>
 
 <H2><A NAME="SECTION04522000000000000000"></A>
-   <A NAME="8013"></A>
+   <A NAME="8015"></A>
 <BR>
 Práctica: Secuencia de Asignaciones Simples
 </H2>
@@ -411,15 +411,21 @@ cuyas claves son los identificadores y cuyos valores
 son los números.
 
 <P>
-Como punto de arranque, clone el repositorio en
+
+<UL>
+<LI>Como punto de arranque, clone el repositorio en
 <A NAME="tex2html307"
   HREF="https://github.com/crguezl/jison-simple-html-calc">https://github.com/crguezl/jison-simple-html-calc</A>.
 
 <P>
-Modifique los analizadores léxico y sintáctico de forma conveniente.
+</LI>
+<LI>Modifique los analizadores léxico y sintáctico de forma conveniente.
 
 <P>
-Añada acciones semánticas para que el analizador devuelva una tabla de símbolos con los identificadores y sus valores.
+</LI>
+<LI>Añada acciones semánticas para que el analizador devuelva una tabla de símbolos con los identificadores y sus valores.
+</LI>
+</UL>
 
 <P>
 
