--- a/node45.html
+++ b/node45.html
@@ -406,9 +406,6 @@ Práctica: Secuencia de Asignaciones Simples
 Modifique este ejemplo para que el lenguaje acepte una secuencia
 de sentencias de asignación de la forma <code>ID = expression</code> separadas
 por puntos y comas, por ejemplo <code>a = 4; b = a+4.56; c = -8.57e34</code>.
-El analizador retorna un hash/objeto 
-cuyas claves son los identificadores y cuyos valores 
-son los números.
 
 <P>
 
@@ -425,7 +422,7 @@ son los números.
 
 <P>
 </LI>
-<LI>Añada acciones semánticas para que el analizador devuelva una tabla de símbolos con los identificadores y sus valores.
+<LI>Añada acciones semánticas para que el analizador devuelva la tabla de símbolos con los identificadores y sus valores y un array con los valores calculados.
 </LI>
 </UL>
 
