--- a/node47.html
+++ b/node47.html
@@ -125,14 +125,18 @@ var grammar = {
     "lex": {
         "rules": [
            ["\\s+", "/* skip whitespace */"],
-           ["[a-f0-9]+", "return 'HEX';"]
+           ["[a-f0-9]+", function() { return 'HEX'; }]
         ]
     },
 
     "bnf": {
         "s": [["hex_strings", "console.log('attr= '+($1)); return $1" ]],
-        "hex_strings": [ [ "hex_strings HEX",  "console.log('h -&gt; h HEX('+$2+')');"+
-                                               "$1.push($2); $$ = $1;"],
+        "hex_strings": [ [ "hex_strings HEX",  function() {
+                                                 console.log('h -&gt; h HEX('+$2+')');
+                                                 $1.push($2); 
+                                                 $$ = $1;
+                                               }
+                         ],
                          ["HEX", "console.log('h -&gt; HEX('+$1+')'); $$ = [$1];" ] 
                        ]
     },
