--- a/node47.html
+++ b/node47.html
@@ -239,6 +239,52 @@ console.log(util.inspect(res));
 </PRE>
 
 <P>
+<PRE>
+[~/srcPLgrado/jison/as-a-library]$ cat mygenerator.coffee 
+# mygenerator.coffee
+util = require('util')
+Parser = require('jison').Parser
+grammar = ''' 
+%lex 
+%%
+\\s+         /* skip whitespace */
+[a-f0-9]+    return 'HEX'
+/lex
+
+%%
+s: hex_strings { console.log('attr= '+$1); return $1 }
+;
+hex_strings: hex_strings HEX { console.log('h -&gt; h HEX('+$2+')'); 
+                               $1.push($2); $$ = $1;
+                             }
+           | HEX { console.log('h -&gt; HEX('+$1+')'); 
+                   $$ = [$1]; 
+                 }
+;
+'''
+parser = new Parser grammar
+# generate source, ready to be written to disk
+parserSource = parser.generate()
+# you can also use the parser directly from memory
+args = process.argv.slice(2).join(' ')
+console.log util.inspect(args)
+if args.length is 0
+  args = 'adfe34bc e82a'
+res = parser.parse(args)
+console.log util.inspect(res)
+</PRE>
+
+<P>
+<PRE>
+[~/srcPLgrado/jison/as-a-library]$ coffee mygenerator.coffee '32e 4f'
+'32e 4f'
+h -&gt; HEX(32e)
+h -&gt; h HEX(4f)
+attr= 32e,4f
+[ '32e', '4f' ]
+</PRE>
+
+<P>
 
 <H4><A NAME="SECTION04540010000000000000">
 Véase</A>
