--- a/node47.html
+++ b/node47.html
@@ -170,7 +170,7 @@ attr= adfe34bc,e82a
 <P>
 <PRE>
 [~/srcPLgrado/jison/as-a-library]$ cat calculator.js
-// mygenerator.js
+// calculator.js
 var util = require('util');
 var Parser = require("jison").Parser;
 
