--- a/node9.html
+++ b/node9.html
@@ -221,11 +221,13 @@ Véase también
 <A NAME="tex2html18"
   HREF="http://www.w3schools.com/tags/att_input_pattern.asp">W3Schools</A>.
 </LI>
-<LI>En la rama <code>karma</code> (no visible al alumno) se encuentra como usar Karma para la ejecución de las pruebas
+<LI>En la rama <code>karma</code> (no visible al alumno) se encuentra como usar Karma para la ejecución de las pruebas.
+en una práctica posterior se introduce Karma.
 </LI>
 </UL>
 
 <P>
+En mi portátil (29/09/2015) un clon del repo se encuentra en:
 <PRE>
 [~/srcPLgrado/temperature(master)]$ pwd -P
 /Users/casiano/local/src/javascript/PLgrado/temperature # 27/01/2014
