--- a/node9.html
+++ b/node9.html
@@ -228,8 +228,10 @@ Véase también
 <A NAME="tex2html19"
   HREF="http://www.w3schools.com/tags/att_input_pattern.asp">W3Schools</A>.
 </LI>
-<LI>En la rama <code>karma</code> (no visible al alumno) se encuentra como usar Karma para la ejecución de las pruebas.
-en una práctica posterior se introduce Karma.
+<LI>Las pruebas no figuran en la rama master  que hay en GitHub (si en el repo privado que hay en BitBucket).
+</LI>
+<LI>En la rama <code>karma</code> (no visible al alumno, no está en GitHub en 2015) se encuentra como usar Karma para la ejecución de las pruebas.
+En una práctica posterior se introduce Karma.
 </LI>
 </UL>
 
