--- a/node9.html
+++ b/node9.html
@@ -228,7 +228,7 @@ Véase también
 <A NAME="tex2html19"
   HREF="http://www.w3schools.com/tags/att_input_pattern.asp">W3Schools</A>.
 </LI>
-<LI>Las pruebas no figuran en la rama master  que hay en GitHub (si en el repo privado que hay en BitBucket).
+<LI>Las pruebas están en el directorio <code>tests/</code> en la rama master  que hay en GitHub 
 </LI>
 <LI>En la rama <code>karma</code> (no visible al alumno, no está en GitHub en 2015) se encuentra como usar Karma para la ejecución de las pruebas.
 En una práctica posterior se introduce Karma.
