--- a/node10.html
+++ b/node10.html
@@ -161,7 +161,7 @@ Requisitos</A>
 </LI>
 <LI>Añada el badge de Travis en el <code>README.md</code>
 </LI>
-<LI>Añada tareas en el `Gulpfile` para la ejecución de las pruebas mediante Karma.
+<LI>Añada tareas en el <code>Gulpfile</code> para la ejecución de las pruebas mediante Karma.
 </LI>
 <LI>Añada (si no lo hizo en la práctica anterior) cubrimiento con blanket.
 </LI>
@@ -201,7 +201,7 @@ Karma: Como Funciona</A>
 <P>
 
 <UL>
-<LI><A NAME="2895"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
+<LI><A NAME="2897"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
 <A NAME="tex2html68"
   HREF="http://karma-runner.github.io/0.10/intro/installation.html">Karma installation</A>)
 is essentially a tool which spawns a web server that executes source
@@ -238,7 +238,7 @@ the test code again.
 </LI>
 <LI>Each browser then loads the source files inside an
 <code>IFrame</code><A NAME="tex2html67"
-  HREF="footnode.html#foot2889"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
+  HREF="footnode.html#foot2891"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
 executes the tests and reports the results back to the server.
 </LI>
 <LI>The server collects the results from all of the captured browsers and presents them to the developer.
@@ -847,7 +847,7 @@ history will be available within their control panel.
 <LI><B>Configure Travis</B>
 
 <P>
-Create a file in your project root called .travis.yml with the following YAML content:
+Create a file in your project root called <code>.travis.yml</code> with the following YAML content:
 <PRE>
 language: node_js
 node_js:
@@ -857,7 +857,7 @@ node_js:
 <LI><B>Setup a Test Command</B>
 
 <P>
-If you do not already have a package.json in your project root create one now. Travis runs npm test to trigger your tests so this is where you tell Travis how to run your tests.
+If you do not already have a <code>package.json</code> in your project root create one now. Travis runs <code>npm test</code> to trigger your tests so this is where you tell Travis how to run your tests.
 <PRE>
 // ...snip...
 'devDependencies': {
@@ -869,12 +869,12 @@ If you do not already have a package.json in your project root create one now. T
 }
 // ...snip...
 </PRE>
-Travis will run npm install before every suite so this is your chance to specify any modules your app needs that Travis does not know about like Karma.
+Travis will run <code>npm install</code> before every suite so this is your chance to specify any modules your app needs that Travis does not know about like Karma.
 </LI>
-<LI>Configure Travis with Firefox
+<LI><B>Configure Travis with Firefox</B>
 
 <P>
-Travis supports running a real browser (Firefox) with a virtual screen. Just update your .travis.yml to set up the virtual screen like this:
+Travis supports running a real browser (Firefox) with a virtual screen. Just update your <code>.travis.yml</code> to set up the virtual screen like this:
 <PRE>
 language: node_js
 node_js:
@@ -883,24 +883,25 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 </PRE>
-And now, you can run your tests on Firefox, just change the npm test command to
+And now, you can run your tests on Firefox, just change the <code>npm test</code> command to
 <PRE>
 karma start --browsers Firefox --single-run
 </PRE>
 </LI>
-<LI>Notes
+<LI><B>Notes</B>
 
 <P>
 
 <UL>
-<LI>Travis' Node environment has very little available. If the startup process in Travis fails check for missing module information and be sure to add them to your package.json dependencies.
+<LI>Travis' Node environment has very little available. If the startup process in Travis fails check for missing module information and be sure to add them to your <code>package.json</code> dependencies.
 </LI>
 <LI>Travis does not run in your local network so any code that attempts to connect to resources should be stubbed out using 
-<A NAME="tex2html77"
+    <A NAME="tex2html77"
   HREF="https://github.com/flatiron/nock">Nock</A>
 (Nock is an HTTP mocking and expectations library for Node.js).
 </LI>
-<LI>There are more options available to your .travis.yml, such as running scripts before the install or test run. There are hints in the Travis docs for GUI apps configuration.
+<LI>There are more options available to your <code>.travis.yml</code>, such as running scripts before the install or test run. There are hints in the Travis docs for GUI apps configuration.
+    
 </LI>
 </UL>
 </LI>
