--- a/node7.html
+++ b/node7.html
@@ -134,7 +134,7 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html999"
   HREF="node9.html#SECTION04120090000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html1000"
-  HREF="node9.html#SECTION041200100000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION041200100000000000000">Introducción a los Selectores CSS</A>
 <LI><A NAME="tex2html1001"
   HREF="node9.html#SECTION041200110000000000000">CSS reset</A>
 <LI><A NAME="tex2html1002"
