--- a/node9.html
+++ b/node9.html
@@ -122,7 +122,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1130"
   HREF="node9.html#SECTION04120090000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html1131"
-  HREF="node9.html#SECTION041200100000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION041200100000000000000">Introducción a los Selectores CSS</A>
 <LI><A NAME="tex2html1132"
   HREF="node9.html#SECTION041200110000000000000">CSS reset</A>
 <LI><A NAME="tex2html1133"
@@ -164,7 +164,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2026"></A>
+   <A NAME="2027"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -455,7 +455,7 @@ CSS</A>
   
 
 <P>
-<A NAME="2055"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2057"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<A NAME="2056"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2058"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 
 <P>
 
@@ -504,25 +504,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2067"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2068"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2069"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2070"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2071"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2072"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2073"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2074"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2075"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2077"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2076"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2078"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -531,7 +531,7 @@ and a <A NAME="2077"></A><SPAN  CLASS="textit">value</SPAN> (the part after the 
 <P>
 
 <H4><A NAME="SECTION041200100000000000000">
-Selectores en CSS</A>
+Introducción a los Selectores CSS</A>
 </H4>
   
 
@@ -665,7 +665,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2083"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2084"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI><P>
@@ -694,6 +694,9 @@ p { font-size: 20px; }
 p { font-size: 30px; }
 </PRE>
 ¿Cual será el tamaño de font que se aplique a los elementos párrafo?
+
+<P>
+Selectors targeting styles later in a CSS document have precedence over the same selectors that appear earlier in the CSS file. 
 </LI>
 <LI>Supuesto que una hoja de estilo contiene estas reglas:
 <PRE>
@@ -701,6 +704,13 @@ div p { color: blue; }
 p{ color: red; }
 </PRE>
 ¿Cual será el color que se aplique a los elementos párrafo?
+
+<P>
+In this instance, the color value for paragraph elements inside of <code>&lt;div&gt;</code>
+elements will be blue, despite the fact that the second color declaration
+appears later in the document. So although the browser
+does give some importance to the order of these rule sets, that order
+is superseded by the <B>specificity</B> of the first rule set.
 </LI>
 <LI>Supuesto que una hoja de estilo contiene estas reglas:
 <PRE>
@@ -715,6 +725,9 @@ body div.container {
 <PRE>
 &lt;div id="main" class="container"&gt;&lt;/div&gt;
 </PRE>
+
+<P>
+The ID selector has very high specificity and thus takes precedence over the second rule set.
 </LI>
 </UL></DIV><P></P>
 
@@ -732,7 +745,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2089"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2090"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -757,7 +770,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2095"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2096"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -766,7 +779,7 @@ The <A NAME="2095"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2097"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2098"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -777,7 +790,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2099"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2100"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -789,7 +802,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2101"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2102"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -801,7 +814,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html33"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2105"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2106"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -815,7 +828,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2109"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2110"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -918,7 +931,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2121"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2123"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2122"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2124"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1380,7 +1393,7 @@ suite('temperature', function() {
 </PRE>
 
 <P>
-The <A NAME="2454"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
+The <A NAME="2463"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
 
 <P>
 <PRE>
@@ -1396,8 +1409,8 @@ describe('Array', function(){
   });
 });
 </PRE>
-The <A NAME="2456"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
-<A NAME="2458"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
+The <A NAME="2465"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
+<A NAME="2467"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
 property to start your chain. 
 
 <P>
@@ -1408,7 +1421,7 @@ Chai Assert Style</A>
   
 
 <P>
-The <A NAME="2464"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
+The <A NAME="2473"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1524,7 +1537,7 @@ Manejando tareas en JS: Gulp</A>
 
 
 <P>
-Why would you want to use a <A NAME="2656"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+Why would you want to use a <A NAME="2665"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
 
 <P>
 They’re small applications that automate often time consuming and boring tasks. 
