--- a/node9.html
+++ b/node9.html
@@ -870,6 +870,10 @@ The margin portion of an element exists outside the element.
 ¿Que <code>border-width</code> tendrán?
 
 <P>
+Here we’ve used the same selector on two different rule sets. The second rule set will take precedence over the first, overriding any styles that are the same in both rule sets.
+The border will become 3px wide (the default border width for a visible border,)
+
+<P>
 See
 <A NAME="tex2html32"
   HREF="https://gist.github.com/crguezl/40c6b3fd6b95cc3d5f97">gist</A>
@@ -1393,7 +1397,7 @@ suite('temperature', function() {
 </PRE>
 
 <P>
-The <A NAME="2463"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
+The <A NAME="2465"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
 
 <P>
 <PRE>
@@ -1409,8 +1413,8 @@ describe('Array', function(){
   });
 });
 </PRE>
-The <A NAME="2465"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
-<A NAME="2467"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
+The <A NAME="2467"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
+<A NAME="2469"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
 property to start your chain. 
 
 <P>
@@ -1421,7 +1425,7 @@ Chai Assert Style</A>
   
 
 <P>
-The <A NAME="2473"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
+The <A NAME="2475"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1537,7 +1541,7 @@ Manejando tareas en JS: Gulp</A>
 
 
 <P>
-Why would you want to use a <A NAME="2665"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+Why would you want to use a <A NAME="2667"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
 
 <P>
 They’re small applications that automate often time consuming and boring tasks. 
