--- a/node10.html
+++ b/node10.html
@@ -154,8 +154,9 @@ Donde</A>
 </H4>
   
 
-Véase 
+Véase  la rama <code>karma</code> en el repositorio descrito en la sección
 <A HREF="node9.html#parrafo:dondetemperatura">1.2</A>.
+Esta rama no está disponible al alumno.
 
 <P>
 
