--- a/node9.html
+++ b/node9.html
@@ -985,6 +985,14 @@ See
 }
 </PRE>
 ¿De que tamaño quedarán <code>margin-top</code> <code>margin-right</code>, <code>margin-bottom</code> y <code>margin-left</code> para los elementos de clase <code>example</code>?
+
+<P>
+Another thing to understand about shorthand is that for certain shorthand properties, the missing values are inherited based on the existing values.
+
+<P>
+We’re omitting the bottom and left, so they'll inherit from the top and right values.
+
+<P>
 </LI>
 </UL></DIV><P></P>
 
@@ -1497,7 +1505,7 @@ suite('temperature', function() {
 </PRE>
 
 <P>
-The <A NAME="2547"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
+The <A NAME="2553"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
 
 <P>
 <PRE>
@@ -1513,8 +1521,8 @@ describe('Array', function(){
   });
 });
 </PRE>
-The <A NAME="2549"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
-<A NAME="2551"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
+The <A NAME="2555"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
+<A NAME="2557"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
 property to start your chain. 
 
 <P>
@@ -1525,7 +1533,7 @@ Chai Assert Style</A>
   
 
 <P>
-The <A NAME="2557"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
+The <A NAME="2563"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1641,7 +1649,7 @@ Manejando tareas en JS: Gulp</A>
 
 
 <P>
-Why would you want to use a <A NAME="2751"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+Why would you want to use a <A NAME="2757"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
 
 <P>
 They’re small applications that automate often time consuming and boring tasks. 
