--- a/node9.html
+++ b/node9.html
@@ -1189,7 +1189,7 @@ Creando un fichero package.json</A>
 Para saber todo sobre 
 <A NAME="tex2html45"
   HREF="https://docs.npmjs.com/files/package.json">ipackage.json</A>
-visite este manual de npm.
+visite este manual de npm o bien escriba <code>npm help json</code> en la línea de comandos.
 
 <P>
 The command:
