--- a/node11.html
+++ b/node11.html
@@ -400,7 +400,8 @@ Al analizar <code>w</code> debería haber un campo vacío al principio, uno en m
 y otro al final.
 
 <P>
-Para resolverlo hemos usado lookahead <code>(^|,)(?=\s*(,|$))</code> que dice que una coma seguida de una coma o el final da lugar a un nuevo campo (y que si al comienzo hay una coma también se produce un nuevo campo):
+Para resolverlo hemos usado lookahead <code>(^|,)(?=\s*(,|$))</code> que dice que una coma seguida de una coma o el final da lugar a un nuevo campo (y que si al comienzo de la cadena 
+hay una coma también se produce un nuevo campo):
 <PRE>
 &gt; r
 /\s*"((?:[^"\\]|\\.)*)"\s*|\s*([^,]+)|(^|,)(?=\s*(,|$))/g
