--- a/node11.html
+++ b/node11.html
@@ -597,6 +597,8 @@ index.html</A>
 </H4>
   
 
+Los dos hechos mas relevantes en este <code>index.html</code> son el uso de las librerías 
+<code>jquery</code>, <code>underscore</code> y el uso de un elemento <code>textarea</code> en vez de un <code>input</code> para la entrada:
 <PRE>
 &lt;html&gt;
   &lt;head&gt;
